--- a/index.html
+++ b/index.html
@@ -270,16 +270,15 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With over 2 years of comprehensive work on projects in the field of Software Development, Aspiring bachelor's degree in Computer Science , Also accompanied with certifications in Web development, AWS etc.
-									Proficient in Front-End, Backend, Datacenter, Cloud-Services, &amp;  AWS.  
-									Demonstrated success in leading impactful projects and providing effective mentorship.</p>
+								<p>"Software Development Professional with hands- On Experience |  Computer Engineering Graduate | Strong Knowledge in DSA | Certified in Web Development, AWS DevOps,  Cloud Services & python  | Proficient in Full-Stack Development and Data management" &amp;  AWS.  
+									Demonstrated success in leading impactful projects and internships.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Aspiring Software Engineer &amp; Software Developer</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
-									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp; Tableau</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, PySpark, Excel, Git, JIRA, Google Analytics &amp; SEO</span></li>
+									<li class="d-flex"><span>Programming languages:</span> <span> Python , C , C++  &amp; Java </span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, Tableau, Power bI, PySpark, Excel, Git, JIRA, Google Analytics, HTML, CSS, JS , React, Angular, or Vue.js ,Data Collection,Data Processing,Data Analysis,Data Visualization,DevOps · Amazon Web Services (AWS) · Cloud Computing · Tools: Git, Jenkins, Docker, Kubernetes · Terraform · Developer Tools: Automated Release Frameworks, Code Design and Testing, Test Automation · Automation · Continuous Integration and Continuous Delivery (CI/CD)  &amp;</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography</span></li>
 									
 								</ul>
@@ -311,7 +310,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>An Aspiring Software Developer with 2 years of experience on projects driving business strategies through data-driven insights. Proven expertise in Data-Center, Front-End, Backend and project management.</p>
+            <p>An Aspiring Software Developer with hands on experience on projects driving business strategies through data-driven insights. Proven expertise in AWS , Data analysis, Front-End, Backend and project management.</p>
           </div>
         </div>
 
@@ -329,9 +328,13 @@
 						<span class="position">NVIDIA Pvt Ltd.</span>
 						<p class="mt-4">Nvidia Corporation is a technology company known for designing and manufacturing graphics processing units (GPUs)..  
 							<ul>
-								<li>Developed a Python-based application to aggregate and analyze stock-related news articles.</li>
-								<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-								<li>Created a RESTful API for serving news data and sentiment analysis results.</li>
+								<li>Managed Docker containers and Kubernetes clusters for development
+and production environments.</li>
+								<li>Integrated security practices into CI/CD pipelines, improving overall
+security posture.</li>
+								<li>Performed system monitoring and troubleshooting using the ELK Stack.</li>
+								<li>Supported disaster recovery planning and execution, ensuring business
+continuity.</li>
 							</ul>
 						</p>
 					</div>
@@ -341,14 +344,17 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2023-2024</span>
-						<h2>AWS-Professional(DevOps)</h2>
-						<span class="position">CloudAge</span>
-						<p class="mt-4">Cloud Age is a software company that automates solutions for business challenges related to IT Infrastructure vendor cost and revenue alignment.
+						<h2>Intern</h2>
+						<span class="position">BNY Mellon</span>
+						<p class="mt-4">BNY is a global financial services company overseeing nearly $50 trillion — managing it, moving it and keeping it safe.
 							<ul>
 								<li>Developed an inventory management system using AWS to automate stock tracking and order processing.</li>
 								<li>Delivered multiple training and mentorship sessions on analytical tools like SQL, MS Excel, Power BI, Tableau and Python.</li>
 								<li>Utilized AWS services including EC2 for hosting, S3 for data storage, and RDS for managing MySQL databases.</li>
 								<li>Integrated AWS Lambda functions for serverless processing and automated email notifications via Amazon SES.</li>
+								<li>Data Collection
+Gathering Information: collect data from different sources, including internal databases, publicly available data, and third-party providers.
+Ensuring Data Integrity: Verify and validate data to ensure accuracy, completeness, and consistency.Data Processing,Data Cleaning ,Data Transformation,Data Analysis,Statistical Analysis,Predictive Analysis ,Creating Reports and Dashboards ,Presentation: Communicating findings clearly and effectively to non-technical audiences, often through presentations and written reports,Collaborative Projects,Project Management,Strategic Initiatives,Advisory Role, Innovation,Continuous Learning</li>
 							</ul>
 						</p>
 					</div>
