--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@ Ensuring Data Integrity: Verify and validate data to ensure accuracy, completene
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2022-2024</span>
-    					<h2>AWS - Datacenter Certification Course</h2>
-    					<span class="position">CloudAge</span>
+    					<h2>AWS - DevOps Certification</h2>
+    					<span class="position">Infosys springboard</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
     			</div>
@@ -385,18 +385,18 @@ Ensuring Data Integrity: Verify and validate data to ensure accuracy, completene
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2017-2022</span>
     					<h2>Bachelor of Computer Engineering</h2>
-    					<span class="position">Sinhgad Academy Of Engineering</span>
-    					<p class="mt-4">Grade: First class distinction.</p>
+    					<span class="position">Sinhgad Academy Of Engineering, Pune(India)</span>
+    					<p class="mt-4">Grade:8 CGPA First class distinction.</p>
     				</div>
 				</div>
     		</div>
 
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
-			
-					<h2>Higher Secondary School</h2>
-					<span class="position">MIT JR. CLG</span>
-					<p class="mt-4">Grade: First class distinction.</p>
+					<span class="date">2015-2017</span>
+					<h2>Diploma in Computer Engineering</h2>
+					<span class="position">Trinity Polytechnic, Pune(India)</span>
+					<p class="mt-4">Grade:7 CGPA First class distinction.</p>
 				</div>
 			</div>
 		</div>
@@ -417,7 +417,7 @@ Ensuring Data Integrity: Verify and validate data to ensure accuracy, completene
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+            <p>Below are the sample Data Analytics , AWS - DevOps & Fullstack Development</p>
           </div>
         </div>
         <div class="row d-flex">
