--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 						const typingTexts = [
 						'Engineer  ',
 						'Developer  ',
-						'AWS-Professional',
+						'AWS-Professional'
+						'Data Engineer',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -278,7 +279,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>Programming languages:</span> <span> Python , C , C++  &amp; Java </span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, Tableau, Power bI, PySpark, Excel, Git, JIRA, Google Analytics, HTML, CSS, JS , React, Angular, or Vue.js ,Data Collection,Data Processing,Data Analysis,Data Visualization,DevOps · Amazon Web Services (AWS) · Cloud Computing · Tools: Git, Jenkins, Docker, Kubernetes · Terraform · Developer Tools: Automated Release Frameworks, Code Design and Testing, Test Automation · Automation · Continuous Integration and Continuous Delivery (CI/CD)  &amp;</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>TensorFlow , Pytorch, pandas , NLTK, NumPy Flask , Keras , scikit-learn.Cloud, Tableau, Power bI, PySpark, Excel, Git, JIRA, Google Analytics ,DevOps · Amazon Web Services (AWS) · Cloud Computing · Tools: Git, Jenkins, Docker, Kubernetes · Terraform · Developer Tools: Automated Release Frameworks, Code Design and Testing, Test Automation · Automation · Continuous Integration and Continuous Delivery (CI/CD)  &amp;</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography</span></li>
 									
 								</ul>
@@ -328,6 +329,13 @@
 						<span class="position">NVIDIA Pvt Ltd.</span>
 						<p class="mt-4">Nvidia Corporation is a technology company known for designing and manufacturing graphics processing units (GPUs)..  
 							<ul>
+								
+<li>Experience leveraging Python ,TensorFlow,Pytorch ,Keras, scikit-learn.</li>
+<li>visualize and fine tune confidential models for prediction and classification.</li>
+<li>Applied Java to write multiple applications including the backend to a HR management software.</li>
+<li>Used Shell Scripting extensively to build and execute SQL scripts, to manage cloud environments, to setup and maintain deep learning models on AWS, to manage  clusters and tasks.</li>
+<li>Cleaned structured and unstructured data, scaled and normalized data using Pandas as well as automated data processing with python.</li>
+<li>Implemented software development life cycles and Agile methodologies as part of a team.</li>
 								<li>Managed Docker containers and Kubernetes clusters for development
 and production environments.</li>
 								<li>Integrated security practices into CI/CD pipelines, improving overall
