--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2022-2023</span>
-						<h2>Intern</h2>
+						<h2>Financial Analyst</h2>
 						<span class="position">BNY Mellon</span>
 						<p class="mt-4">BNY is a global financial services company overseeing nearly $50 trillion — managing it, moving it and keeping it safe.
 							<ul>
